--- a/uppsatsen.tex
+++ b/uppsatsen.tex
@@ -179,25 +179,25 @@ Följande avsnitt beskriver den metodik som valts för utförandet av studien.
 
 Eftersom studiens syfte är att konstruera, implementera och utvärdera en systemartefakt valdes en metodik som presenteras av Nunamaker m. fl. [Nunamaker] eftersom det är en erkänd och välbeprövad process för forskning inom informationssystem [källa]. Författarna definierar en iterativ femstegsprocess för hur sådan forskning bör bedrivas vilken innefattar att: \textit{(1) konstruera ett konceptuellt ramverk} \textit{(2) utveckla en systemarkitektur} \textit{(3) konstruera och analysera systemet} \textit{(4) implementera systemet} och \textit{(5) utvärdera systemet}. För att ytterligare säkerställa studiens kvalité ämnar den att följa de sju riktlinjer för forskning inom informationssystem definierade av Hevner m.fl. [Hevner]. 
 
-\subsubsection{Konstruera ett konceptuellt ramverk}
+\subsubsection*{Konstruera ett konceptuellt ramverk}
 
 Syftet med att konstruera ett konceptuellt ramverk är att definiera en relevant forskningsfråga och systemkrav. För att identifiera och definiera dessa kommer vi att genomföra en litteraturstudie av liknande system och utföra intervjuer med lärare och studenter vid Malmö högskola. Vi har valt ut tre lärare som alla har lång, dokumenterad erfarenhet av att lära ut programmering till högskolestudenter i introduktionskurser. Valet av intervjupersoner anser vi vara befogat eftersom personerna i fråga är representativa för den huvudsakliga målgruppen och verksamma inom den miljö som systemet ska tillämpas. Därav kommer vi få en djupare förståelse i ämnet vilket hjälper oss att omsätta den insamlade informationen till krav för systemet samt definiera forskningsfrågan. 
 
 Anledningen till att vi inte väljer en kvantitativ undersökningsmetod som exempelvis enkäter med fördefinierade svar beror på att de endast ger en ytlig förståelse i ämnet till skillnad från intervjuer [seminarieboken]. Vid intervjuer finns det även utrymme för att ställa följdfrågor till respondenten samt att det går att förtydliga frågorna vid eventuella missuppfattningar, något som inte är möjligt vid fördefinierade enkätundersökningar [seminarieboken]. Informationen som vi samlar in från litteraturstudien kommer att användas för att urskilja de befintliga systemen. Därigenom kan vi identifiera funktioner som vi anser saknas i dessa system vilket gör att vi, tillsammans med informationen vi erhåller från intervjuerna, kan definiera krav som systemets ska uppfylla.
 
-\subsubsection{Utveckla en systemarkitektur}
+\subsubsection*{Utveckla en systemarkitektur}
 
 Enligt Nunamaker m. fl. innefattar följande steg att bestämma systemets komponenter och definiera förhållandet mellan komponenterna samt att identifiera och definiera systemets funktionalitet []. Vi kommer att använda den insamlade information från föregående steg för att definiera komponenterna och systemfunktionerna. Nunamaker m.fl. påpekar betydelsen av att definiera mätbar funktioner för systemet eftersom det underlättar vid systemutvärderingen []. 
 
-\subsubsection{Konstruera och analysera systemet}
+\subsubsection*{Konstruera och analysera systemet}
 
 I detta steg är syftet att vi ska att identifiera möjliga lösningar, tekniker och språk för att kunna implementera systemet i kommande steg []. Möjliga lösningar kommer att konstrueras vilka vi sedan analyserar innan vi slutligen väljer det bästa alternativet att gå vidare med och implementera.
 
-\subsubsection{Implementera systemet}
+\subsubsection*{Implementera systemet}
 
 Tanken med följande steg är att implementera en prototyp som ska utvärderas i kommande steg. Prototypen kommer att ge insikter angående konceptets genomförbarhet och dess möjlighet att besvara frågeställningen.
 
-\subsubsection{Utvärdera systemet}
+\subsubsection*{Utvärdera systemet}
 
 Hevner presenterar i sin tredje riktlinje \textit{Design Evaluation} olika metoder för utvärdering av informationssystem. Den metod som vi anser är lämpligast för vår studie är en experimentell utvärderingmetod, mer specifikt kontrollerade experiment, eftersom det innebär att studera en implementerad prototyp i en kontrollerad miljö. Vi kommer att utföra experiment på lärare och studenter vilka är de två huvudgrupperna i studien. Målet med experimenten för lärare är att besvara frågeställningen \textit{Kan vårt bedömningssystem minska tidsåtgången för lärarens bedömningsprocess av programmeringsuppgifter?}, medans experimenten för studenter har som mål att besvara \textit{Kan vårt bedömningssystem hjälpa studenterna att utveckla deras programmeringskunskaper?}.
 
@@ -213,6 +213,10 @@ Syftet med genomförandet av kontrollerade experiment är att utvärdera den protot
 Vid experimenten kommer studenten att först läsa en text som presenterar oss och vårt examensarbete följt av övergripande information om hur experimentet kommer att utföras. I texten beskrivs även hur den insamlade informationen kommer att behandlas. Därefter får studenten besvara en enkät med inledande frågor\footnote{Appendix A}. Efter att enkäten besvarats kommer studenten att få instruktioner om hur användartestet kommer att genomföras följt av att studenten genomför användartestet. Testet går ut på att testa vår prototyp med en existerande uppgift som vi tagit från kursen \textit{Introduktion till programmering} vid Malmö Högskola. Till denna uppgift har vi skrivit testfall som vi sedan har laddat upp till vår prototyp, det är dessa testfall som studenternas program sedan kommer att köras mot. När användartestet har genomförts kommer studenten att få besvara ytterligare en enkät\footnote{Appendix B}. Syftet med enkäten är att få en bra bild av hur studenten upplevde att använda vår prototyp.
 
 Vid genomförandet av användartestet och den andra enkäten kommer vi ej närvara i rummet eller ta tid, detta för att undvika att skapa onödig press på studenten. Vi tycker även att det är viktigt att poängtera för studenten att all information som vi samlar in är helt anonym för att studentens åsikt ska vara sanningsenlig.
+
+\subsection{Analytisk jämförelse}
+
+Genom intervjuerna kommer vi att ta reda på hur mycket av lärarnas resurser som läggs på att rätta uppgifter. Vi kommer att använda informationen för att sedan jämföra det mot den tid som det tar att skriva testfall till en laborationsuppgift. För att samla in informationen, gällande tidsåtgången av testfall, kommer vi att välja ut en laborationsuppgift från kursen objektorienterad programmering DA339A, vilket är en introduktionskurs till programmering för diverse program på Malmö Högskola. Till uppgiften kommer vi att skriva testfall vilka är tänkta att ersätta lärarnas bedömnings- och rättningsprocess. Syftet med jämförelsen är att undersöka om skapandet av testfall för en uppgift kräver mer eller mindre tid än vad en lärare lägger på att bedöma uppgifter manuellt. Målet med jämförelsen är att besvara frågeställningen {ref: 1}. 
 
 \newpage
 \section{Resultat}
