--- a/referenser.bib
+++ b/referenser.bib
@@ -34,7 +34,7 @@
 }
 
 @article{caiza_7,
-	title = {{PROGRAMMING} {ASSIGNMENTS} {AUTOMATIC} {GRADING}: {REVIEW} {OF} {TOOLS} {AND} {IMPLEMENTATIONS}},
+	title = {PROGRAMMING ASSIGNMENTS AUTOMATIC GRADING: REVIEW OF TOOLS AND IMPLEMENTATIONS},
 	issn = {2340-1079},
 	url = {https://library.iated.org/view/CAIZA2013PRO},
 	shorttitle = {{PROGRAMMING} {ASSIGNMENTS} {AUTOMATIC} {GRADING}},
@@ -304,3 +304,115 @@
   note = {Hämtad: 2016-04-10}
 }
 
+@article{ala-mutka,
+	title = {A {Survey} of {Automated} {Assessment} {Approaches} for {Programming} {Assignments}},
+	volume = {15},
+	issn = {0899-3408, 1744-5175},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/08993400500150747},
+	doi = {10.1080/08993400500150747},
+	language = {en},
+	number = {2},
+	urldate = {2016-04-29},
+	journal = {Computer Science Education},
+	author = {Ala-Mutka, Kirsti M},
+	month = jun,
+	year = {2005},
+	keywords = {BRA, HA MED},
+	pages = {83--102},
+	file = {A Survey of Automated Assessment Approaches for Programming Assignments.pdf:files/255/A Survey of Automated Assessment Approaches for Programming Assignments.pdf:application/pdf}
+}
+
+@article{pieterse,
+	series = {{CSERC} '13},
+	title = {Automated {Assessment} of {Programming} {Assignments}},
+	volume = {2013},
+	url = {http://dl.acm.org/citation.cfm?id=2541917.2541921},
+	author = {Pieterse, Vreda},
+	keywords = {BRA, HA MED},
+	file = {Pieterse_CSERC13.pdf:files/239/Pieterse_CSERC13.pdf:application/pdf}
+}
+
+@inproceedings{webtasks,
+	title = {{WebTasks}: online programming exercises made easy},
+	isbn = {978-1-60558-078-4},
+	shorttitle = {{WebTasks}},
+	url = {http://portal.acm.org/citation.cfm?doid=1384271.1384405},
+	doi = {10.1145/1384271.1384405},
+	language = {en},
+	urldate = {2016-04-29},
+	publisher = {ACM Press},
+	author = {Rößling, Guido and Hartte, Sebastian},
+	year = {2008},
+	keywords = {BRA, HA MED},
+	pages = {363},
+	file = {09e41509902853c6ab000000.pdf:files/241/09e41509902853c6ab000000.pdf:application/pdf}
+}
+
+@incollection{montoya-dato-2009,
+	address = {Berlin, Heidelberg},
+	title = {An {Experience} on {Ada} {Programming} {Using} {On}-{Line} {Judging}},
+	volume = {5570},
+	isbn = {978-3-642-01923-4 978-3-642-01924-1},
+	url = {http://link.springer.com/10.1007/978-3-642-01924-1_6},
+	urldate = {2016-05-11},
+	booktitle = {Reliable {Software} {Technologies} – {Ada}-{Europe} 2009},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Montoya-Dato, Francisco J. and Fernández-Alemán, José Luis and García-Mateos, Ginés},
+	editor = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Doug and Vardi, Moshe Y. and Weikum, Gerhard and Kordon, Fabrice and Kermarrec, Yvon},
+	year = {2009},
+	pages = {75--89}
+}
+
+@article{woit_2003,
+	title = {Effectiveness of online assessment},
+	volume = {35},
+	issn = {00978418},
+	url = {http://portal.acm.org/citation.cfm?doid=792548.611952},
+	doi = {10.1145/792548.611952},
+	language = {en},
+	number = {1},
+	urldate = {2016-05-05},
+	journal = {ACM SIGCSE Bulletin},
+	author = {Woit, Denise and Mason, David},
+	month = jan,
+	year = {2003},
+	pages = {137},
+	file = {p137-woit.pdf:files/261/p137-woit.pdf:application/pdf}
+}
+
+@inproceedings{carter,
+	title = {How shall we assess this?},
+	url = {http://portal.acm.org/citation.cfm?doid=960875.960539},
+	doi = {10.1145/960875.960539},
+	language = {en},
+	urldate = {2016-04-29},
+	publisher = {ACM Press},
+	author = {Carter, Janet and Ala-Mutka, Kirsti and Fuller, Ursula and Dick, Martin and English, John and Fone, William and Sheard, Judy},
+	year = {2003},
+	pages = {107--123},
+	file = {p107-carter.pdf:files/243/p107-carter.pdf:application/pdf}
+}
+
+@inproceedings{cinelli,
+   	title = {{GRASP}: {Grading} {and} {Rating} {ASsistant} {Professor}},
+	url = {http://www.dsi.unive.it/IEEIII/atti/PROCEEDINGS_IEEIII08.pdf},
+	booktitle = {Proceedings of the ACM-IFIP IEEIII 2008 Informatics Education Europe III Conference},
+	language = {en},
+	urldate = {2016-05-11},
+	publisher = {Venice, Italy},
+	author = {Cerioli, Maura and Cinelli, Pierpaolo},
+	year = {2008},
+	pages = {37--51},
+}
+
+@inproceedings{enstrom,
+	title = {Five years with kattis \#x2014; {Using} an automated assessment system in teaching},
+	doi = {10.1109/FIE.2011.6142931},
+	booktitle = {2011 {Frontiers} in {Education} {Conference} ({FIE})},
+	author = {Enström, E. and Kreitz, G. and Niemelä, F. and Söderman, P. and Kann, V.},
+	month = oct,
+	year = {2011},
+	keywords = {action research methodology, Algorithms, Automated Assessment, automated assessment system, automated grading, computer science courses, computer science education, Conferences, course evaluations, course experience teaching, CS courses, Education, educational administrative data processing, educational courses, Electronic mail, Problem-solving, problem solving education, Programming, programming education, Programming profession, student submitted solution statistics, teaching, teaching algorithmic problem solving, Testing},
+	pages = {T3J--1--T3J--6},
+	file = {IEEE Xplore Abstract Record:files/272/abs_all.html:text/html;IEEE Xplore Full Text PDF:files/271/Enström m. fl. - 2011 - Five years with kattis #x2014\; Using an automated .pdf:application/pdf}
+}
