An additonal comment on the analysis chapter

--- a/uppsatsen.tex
+++ b/uppsatsen.tex
@@ -573,6 +573,7 @@ Det är sju av åtta testpersoner som anser att automatiserad bedömning är bä
 
 \newpage
 \section{Analys och diskussion}
+\uek{PÅ dte hela taget tycker jag ni har skrivit ett informativt och lättläst kapitel som jag gillade att läsa. Men det jag saknar är, precis som med forskningsfrågorna, en tätare anknytning till den artefakt som ni faktiskt tog fram. Ni nämner knappt LEAP här utan baserar väldigt mycket av er analys på intervjuer och frågorna i ert kontrollerade experiment. På något sätt skulle det bättre framgå att slutsatserna i er utmärkta analys hade inte gått att göra utan att ni fört tagit fram artefakten. eller är det bara jag som är kinkig då jag inte läser rapporten från början till slut just nu?}
 
 I en studie av Carter m. fl. \cite{carter} framkom det att åsikterna om bedömningssystem bland de intervjuade lärarna i studien var mer positiv ju mer erfarenhet av bedömningssystem de hade. De lärare utan tidigare erfarenhet av bedömningssystem ansåg att sådana system ej var lämpliga för att testa studenters kunskaper och att kvalitén på återkopplingen var låg. Detta resultat kan jämföras \uek{Menar ni jämföra, som i veteskapligt lingo bara betyder just jämföra, eller menar ni att det är jämförbara = liknande resultat. Var tydliga här att det finns andra artiklar som bekräftar det ni såg i era intervjuer. } med resultatet från de intervjuer som vi genomförde med tre lärare på Malmö Högskola eftersom två av lärarna inte trodde på att använda automatiserade bedömningssystem vid programmeringskurser och att dessa två lärare aldrig tidigare använt ett bedömningssystem i deras programmeringskurser. \uek{Föregående mening är vääääldigt lång.} Därför tror vi att deras negativa åsikter kan bero på deras oerfarenhet av bedömningssystem.\uek{Här bör ni faktiskt använda passiv form för att göra det troligt att även andra skulle kunna dra samma slutsats.}
 
