Still trying to work out merge conflicts

--- a/uppsatsen.tex
+++ b/uppsatsen.tex
@@ -212,7 +212,7 @@ Hur kan ett bedömningssystem av den här typen användas i programmeringskurser
 
 \uek{jag vet att vi diskuterat det här tidigare\ldots Jag tycker att era forskningsfrågor är bra och ni har genomfört aktiviteter som svarar på dem, men min undran är om det skulle gå att formulera frågorna så att det uppenbara sättet att svara på dem är att bygga en prototyp (vilket ni ju har gjort). Som det är nu är de så allmänna att ni hade kunna göra en litteraturstudie och en frågeenkät och så hade ni varit klara, dvs ett rent teoretiskt arbete.}
 
-\uek{Finns det materail i ert Relaterat arbete som svara på någon av era frågor (eller väldigt närliggande)? Skulle det i så fall påverka hur ni formulerar era frågor?}
+\uek{Finns det material i ert Relaterat arbete som svara på någon av era frågor (eller väldigt närliggande)? Skulle det i så fall påverka hur ni formulerar era frågor?}
 
 \subsection{Avgränsning}
 
